Issue #49: Reduce rule violations
Fix various rule violations reported by Teamcity.